fix(understand): propagate system message + JSON extraction fixes to CLI and web app
All 3 surfaces now aligned: MCP server, CLI, and web app all use system message
separation (prevents self-referential code confusion) and bracket extraction
(handles text before/after JSON). Completes the fix trilogy from stress test.

--- a/lamarck/projects/understand/app.html
+++ b/lamarck/projects/understand/app.html
@@ -350,7 +350,12 @@ async function generate() {
   document.getElementById("generateBtn").disabled = true;
   setStatus("loading", "Analyzing code and generating questions...");
   
-  const prompt = `You are a code comprehension expert. Given the following code, generate exactly 3 questions that test whether the developer truly understands THIS SPECIFIC code — not general software engineering principles.
+  const systemPrompt = `You are a code comprehension quiz generator. You MUST respond with ONLY a JSON array. No explanations, no markdown, no text before or after the JSON. Your entire response must be parseable by JSON.parse().
+
+Output format (respond with ONLY this, nothing else):
+[{"question": "...", "hint": "...", "key_concepts": ["..."]}]`;
+
+  const userPrompt = `Generate exactly 3 questions that test whether a developer truly understands THIS SPECIFIC code — not general software engineering principles.
 
 CRITICAL: Questions must be answerable ONLY by someone who understands this particular file.
 
@@ -375,24 +380,24 @@ File: ${filename}
 ${code.slice(0, 8000)}
 \`\`\`
 
-Respond in JSON format:
-[
-  {
-    "question": "...",
-    "hint": "...",
-    "key_concepts": ["concept1", "concept2"]
-  }
-]
+Respond with ONLY the JSON array. No other text.`;
 
-Return ONLY the JSON array, no markdown formatting.`;
-
-  const response = await callLLM([{ role: "user", content: prompt }]);
+  const response = await callLLM([
+    { role: "system", content: systemPrompt },
+    { role: "user", content: userPrompt },
+  ]);
   document.getElementById("generateBtn").disabled = false;
   
   if (!response) return;
   
   try {
-    const cleaned = response.replace(/^```json?\n?/m, "").replace(/\n?```$/m, "").trim();
+    let cleaned = response.replace(/^```json?\n?/m, "").replace(/\n?```$/m, "").trim();
+    // Extract JSON array if model produced surrounding text
+    const firstBracket = cleaned.indexOf("[");
+    const lastBracket = cleaned.lastIndexOf("]");
+    if (firstBracket !== -1 && lastBracket > firstBracket) {
+      cleaned = cleaned.slice(firstBracket, lastBracket + 1);
+    }
     questions = JSON.parse(cleaned);
   } catch (e) {
     setStatus("error", "Failed to parse questions. Try again.");
