landing(understand): Anthropic quote as primary social proof
Their RCT says 'generation-then-comprehension' is the only AI pattern
that preserves learning. We automate exactly that pattern.

--- a/lamarck/projects/understand/landing.html
+++ b/lamarck/projects/understand/landing.html
@@ -270,7 +270,7 @@
     <div class="stats">
       <div class="stat">
         <span class="number">-17%</span>
-        <span class="label">skill reduction with AI tools<br><small>Shen & Tamkin, 2025</small></span>
+        <span class="label">comprehension with AI tools<br><small>Anthropic RCT, Jan 2026</small></span>
       </div>
       <div class="stat">
         <span class="number">1.7x</span>
@@ -309,6 +309,10 @@
     </div>
 
     <div class="quote-block">
+      <p>"The participants who showed stronger mastery used AI assistance not just to produce code but to build comprehension while doing so — whether by asking follow-up questions, requesting explanations, or posing conceptual questions."</p>
+      <div class="attribution">— Shen & Tamkin, Anthropic Research, Jan 2026</div>
+    </div>
+    <div class="quote-block" style="margin-top: 16px; background: rgba(30,30,50,0.5); border-left-color: var(--text-dim);">
       <p>"Automation handles the easy parts, leaving only the hard parts for humans — but humans have lost the practice that would prepare them for those hard parts."</p>
       <div class="attribution">— Lisanne Bainbridge, "Ironies of Automation," 1983</div>
     </div>
@@ -381,8 +385,8 @@
 
   <section class="cta">
     <h2>Stop Shipping Code You Don't Understand</h2>
-    <p>Open source. Currently in prototype. Star the repo to follow progress.</p>
-    <a href="https://github.com/renjiyun06/pi-mono/tree/autopilot-0008/lamarck/projects/understand" class="cta-button">
+    <p>Open source. Anthropic's own research says this approach works — we just made it a tool.</p>
+    <a href="https://github.com/renjiyun06/pi-mono/tree/main/lamarck/projects/understand" class="cta-button">
       View on GitHub
     </a>
   </section>
