research: creative debt — Kreminski et al. homogenization study + Graphite 52%
C&C 2024 (36 participants): LLM users generate more ideas individually
but less semantically distinct ideas collectively. Same inversion
pattern: the benefit IS the cause of the problem. Graphite: 52% of
new internet content is AI-generated (65K article sample, Oct 2025).

--- a/lamarck/projects/douyin/tools/ai-debt-framework/index.html
+++ b/lamarck/projects/douyin/tools/ai-debt-framework/index.html
@@ -296,11 +296,11 @@ const debts = [
     summary: "Homogenization when everyone uses the same AI",
     evidence: "55%",
     rows: [
-      ["Benefit", "Individual output quality improves — better writing, better images, better code"],
-      ["Cost", "Everyone converges on the same style. Aggregate creativity declines."],
-      ["Evidence", "Graphite: 50% of internet articles are now AI-generated. Creativity studies show homogenization effect."],
-      ["Crisis", "A world where all content sounds the same, looks the same, reads the same → value of originality skyrockets but fewer people can produce it"],
-      ["Studies", "Graphite 2025, creativity homogenization studies"]
+      ["Benefit", "Individual output quality improves — more ideas, better writing, faster production"],
+      ["Cost", "Everyone converges on the same patterns. Users feel LESS responsible for their ideas."],
+      ["Evidence", "Graphite (Oct 2025): 52% of new internet content is AI-generated. Kreminski et al. (C&C 2024): LLM users generate more ideas per person but less semantically distinct ideas across users."],
+      ["Crisis", "A world where all content sounds the same → value of originality skyrockets but fewer people can produce it → creative skill atrophy"],
+      ["Studies", "Graphite 2025, Kreminski et al. 2024 (arXiv 2402.01536), Frontiers 2025"]
     ]
   },
   {
