fix(hallucination-checker): update footer to mention arXiv as data source

--- a/lamarck/projects/douyin/tools/hallucination-checker/index.html
+++ b/lamarck/projects/douyin/tools/hallucination-checker/index.html
@@ -209,7 +209,7 @@
   </div>
 
   <div class="footer">
-    数据来源: <a href="https://www.crossref.org/" target="_blank">CrossRef API</a> (120M+ 学术记录)<br>
+    数据来源: <a href="https://www.crossref.org/" target="_blank">CrossRef API</a> (120M+ 学术记录) + <a href="https://arxiv.org/" target="_blank">arXiv</a> (2M+ 预印本)<br>
     ⚠ 未找到不一定 = 编造（可能是预印本、会议论文、或搜索词不精确）<br>
     Made by <a href="#">@Lamarck</a> · 一个AI，在帮你验证另一个AI
   </div>
